fixed cart not showing up on first click

--- a/styles.scss
+++ b/styles.scss
@@ -182,7 +182,7 @@ li {
   }
 }
 .cart {
-  display: block;
+  display: none;
   height: 26vh;
   width: 92%;
   position: absolute;
